[gd_scene load_steps=8 format=3 uid="uid://dvjiyofi3dsp6"]

[ext_resource type="Script" uid="uid://bfyn8marul28k" path="res://Scripts/Entity/Submarine/SubmarineWeaponsModule.gd" id="1_m24gv"]
[ext_resource type="Script" uid="uid://cywews2kwsymx" path="res://Scripts/Entity/Submarine/AttachmentPoint.gd" id="2_bwdr6"]
[ext_resource type="Script" uid="uid://dlliifnia7sm4" path="res://Scripts/ResourceScripts/Misc/FilepathResource.gd" id="2_jjbht"]
[ext_resource type="PackedScene" uid="uid://yigraya7x7v4" path="res://Scenes/TSCN/Entities/Submarine/SubmarineWeapons/SubmarineBurstWeapon.tscn" id="2_runn8"]

[sub_resource type="Resource" id="Resource_40x5l"]
script = ExtResource("2_jjbht")
file = "res://Scenes/TSCN/Entities/Submarine/SubmarineModules/SubmarineWeaponsModule.tscn"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufap1"]
size = Vector2(400, 400)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_n4ur8"]
polygon = PackedVector2Array(-180, 200, -180, 60, -130, -15, -90, -40, 0, -50, 90, -40, 130, -15, 180, 60, 180, 200, 130, 200, 130, 60, 70, 10, 0, 5, -70, 10, -130, 60, -130, 200)

[node name="SubmarineWeaponsModule" type="Node2D"]
script = ExtResource("1_m24gv")
attached_weapon = ExtResource("2_runn8")
path = SubResource("Resource_40x5l")

[node name="ModuleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ModuleArea"]
shape = SubResource("RectangleShape2D_ufap1")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]

[node name="AttachmentPoints" type="Node2D" parent="."]

[node name="Entrance" type="Node2D" parent="AttachmentPoints"]
position = Vector2(0, 200)
script = ExtResource("2_bwdr6")
direction = Vector2(0, 1)

[node name="Collision" type="Node2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collision"]
polygon = PackedVector2Array(-180, 200, -180, 60, -130, -15, -90, -40, 0, -50, 90, -40, 130, -15, 180, 60, 180, 200, 130, 200, 130, 60, 70, 10, 0, 5, -70, 10, -130, 60, -130, 200)

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-180, 200, -180, 60, -130, -15, -90, -40, 0, -50, 90, -40, 130, -15, 180, 60, 180, 200, 130, 200, 130, 60, 70, 10, 0, 5, -70, 10, -130, 60, -130, 200)

[node name="SubmarineWeaponSlot" type="Node2D" parent="."]
position = Vector2(0, -60)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_n4ur8")

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_interaction_area_area_exited"]
